--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,8 +31,8 @@ a,
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
+    height: 80vh;
+    width: 80vw;
   }
 }
