--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,6 @@
 @import "./base.css";
+@import "./vue-multiselect.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,7 +8,7 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  @apply py-8;
 
   font-weight: normal;
 }
@@ -36,3 +38,5 @@ a,
     width: 80vw;
   }
 }
+
+
