UI: Fix rendering issue with html2Canvas, fix linter errors

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -50,6 +50,9 @@ p,li,figcaption {
   animation-duration: var(--animate-duration) !important;
 }
 
+.bg-default{
+  background-color: #181818;
+}
 
 /**********/
 
