UI: Add content fill for snake borders

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-/*@import './expose.css'; /* expose all tailwind css default colours*/
+@import './expose.css'; /* expose all tailwind css default colours */
 @import "./base.css";
 @import "./vue-multiselect.css";
 
