UI: Fix animation duration issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -47,7 +47,7 @@ p,li,figcaption {
 
 *{
   --animate-duration: 1s;
-  animation-duration: var(--animate-duration) !important;
+  animation-duration: var(--animate-duration, 1s);
 }
 
 .bg-default{
